<resources>
    <string name="app_name">Administración de Usuarios</string>
    <string name="hint_contrasena">Contraseña:</string>
    <string name="hint_nombre">Nombre:</string>
    <string name="hint_telefono">Telefono:</string>
    <string name="hint_correo_electronico">Correo electronico:</string>
    <string name="btn_guarda">Guardar Usuario</string>
    <string name="menu_nuevo">Nuevo registro</string>
    <string name="btnSalir">CERRAR SESION</string>

    //Strings de la Vista de consulta de usurio

    <string name="lblNombre">Nombre:</string>
    <string name="lblContrasena">Contraseña:</string>
    <string name="lblTelefono">Teléfono:</string>
    <string name="lblCorreo">Correo electrónico:</string>


    //Strings de la vista de Login
    <string name="imagenLogin">imagenLogin</string>
    <string name="loginBtnRegister">REGISTRAR</string>
    <string name="loginLblUserName">USUARIO:</string>
    <string name="btn_Login">INICIAR</string>
    <string name="lblLogInPassWord">CONTRASEÑA:</string>
    <string name="lbl_Title">INICIO DE SESION IU DIGITAL</string>


    //Splash
    <string name="splashLblLoading">Espere un momento por favor</string>
    <string name="splashImage">splashImage</string>

    //Nuevo usuario

    <string name="hint_nombreNuevo">Ingresa tu nombre</string>
    <string name="hint_telefonoNuevo">Ingresa tu celular</string>
    <string name="hint_correoNuevo">xxx@gmail.com</string>
    <string name="hint_contrasenaNueva">******</string>

    //Iconos
    <string name="btnEliminar">btnEliminar</string>
    <string name="btnEditar">btnEditar</string>
</resources>