<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lblNombre"
            android:text="@string/hint_nombre"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_nombreNuevo"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewNombre"
            android:minHeight="48dp"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/viewContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_contrasena" />

        <EditText
            android:id="@+id/txtContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_contrasenaNueva"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:labelFor="@+id/viewNombre"
            android:minHeight="48dp"
            android:textSize="18sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/viewTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_telefono" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_telefonoNuevo"
            android:inputType="phone"
            android:labelFor="@+id/viewTelefono"
            android:minHeight="48dp"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/viewCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_correo_electronico" />

        <EditText
            android:id="@+id/txtCorreoElectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_correoNuevo"
            android:inputType="textEmailAddress"
            android:labelFor="@+id/viewCorreo"
            android:minHeight="48dp"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btnGuarda"
            android:layout_width="156dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/btn_guarda"
            android:textColor="#FFFFFF" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:src="@drawable/ic_edit"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
            android:focusable="true"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:src="@drawable/ic_delete"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
            android:focusable="true"
         />

    </LinearLayout>

</LinearLayout>