<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombre" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewNombre"
            android:minHeight="48dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_contrasena" />

        <EditText
            android:id="@+id/txtContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:labelFor="@+id/viewContraseña"
            android:minHeight="48dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_telefono" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:labelFor="@+id/viewTelefono"
            android:minHeight="48dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_correo_electronico" />

        <EditText
            android:id="@+id/txtCorreoElectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:labelFor="@+id/viewCorreo"
            android:minHeight="48dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnGuarda"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/btn_guarda"
            android:textColor="#F8F4F4"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>